# pixi-conda-build-submodule-test

./: README.md  pyproject.toml
src/climserve_with_climkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
