[project]
authors         = [{ name = "Robin Houdmeyers", email = "robin.houdmeyers@gmail.com" }]
dependencies    = []
name            = "climserve-with-climkit"
requires-python = ">= 3.11"
version         = "0.1.0"

[tool.pixi.workspace]
channels  = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]
preview   = ["pixi-build"]

[tool.pixi.pypi-dependencies]
climserve_with_climkit = { path = ".", editable = true }

[tool.pixi.system-requirements]
cuda = "11.8"

[tool.pixi.dependencies]
climkit = { path = "./packages/climkit" }
urbnet  = { path = "./packages/urbnet" }

[tool.ruff]
line-length = 160
